--- a/BankTransactions/Views/Transactions/Index.cshtml
+++ b/BankTransactions/Views/Transactions/Index.cshtml
@@ -13,7 +13,7 @@
                 @Html.DisplayNameFor(model => model.AccountNumber)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.BeneficiaryNumber)
+                @Html.DisplayNameFor(model => model.BeneficiaryName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.BankName)
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.SwiftCode)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Ammount)
+                @Html.DisplayNameFor(model => model.Amount)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Date)
@@ -39,7 +39,7 @@
                 @Html.DisplayFor(modelItem => item.AccountNumber)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.BeneficiaryNumber)
+                @Html.DisplayFor(modelItem => item.BeneficiaryName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.BankName)
@@ -48,7 +48,7 @@
                 @Html.DisplayFor(modelItem => item.SwiftCode)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Ammount)
+                @Html.DisplayFor(modelItem => item.Amount)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Date)
