--- a/BankTransactions/Views/Transactions/AddorEdit.cshtml
+++ b/BankTransactions/Views/Transactions/AddorEdit.cshtml
@@ -17,9 +17,9 @@
                 <span asp-validation-for="AccountNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BeneficiaryNumber" class="control-label"></label>
-                <input asp-for="BeneficiaryNumber" class="form-control" />
-                <span asp-validation-for="BeneficiaryNumber" class="text-danger"></span>
+                <label asp-for="BeneficiaryName" class="control-label"></label>
+                <input asp-for="BeneficiaryName" class="form-control" />
+                <span asp-validation-for="BeneficiaryName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="BankName" class="control-label"></label>
@@ -36,9 +36,9 @@
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label asp-for="Ammount" class="control-label"></label>
-                        <input asp-for="Ammount" class="form-control" />
-                        <span asp-validation-for="Ammount" class="text-danger"></span>
+                        <label asp-for="Amount" class="control-label"></label>
+                        <input asp-for="Amount" class="form-control" />
+                        <span asp-validation-for="Amount" class="text-danger"></span>
                     </div>
                 </div>
             </div>
