--- a/BankTransactions/Views/Transactions/Delete.cshtml
+++ b/BankTransactions/Views/Transactions/Delete.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.AccountNumber)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BeneficiaryNumber)
+            @Html.DisplayNameFor(model => model.BeneficiaryName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BeneficiaryNumber)
+            @Html.DisplayFor(model => model.BeneficiaryName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.BankName)
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.SwiftCode)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Ammount)
+            @Html.DisplayNameFor(model => model.Amount)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ammount)
+            @Html.DisplayFor(model => model.Amount)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Date)
